--- a/src/client/content/styles.css
+++ b/src/client/content/styles.css
@@ -15,7 +15,7 @@ body {
   text-shadow: red;
 }
 .column-display:hover {
-  background-color: green;
+  background-color: red;
 }
 button:hover {
   background-color: yellowgreen;
